Use error handler middleware
